# ums-stack-data

./: .copier-answers.repo-component.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Pipfile  README.md  docker-compose.yaml  pyproject.toml  renovate.json5  sonar-project.properties
.config/: copier-answers.helm-chart-unittests.yaml
docker/data-loader/: Dockerfile  Pipfile  README.md  example-context.yaml  process-all.sh  reload-udm-rest-api-cache.py  set-data-loader-status-flag.yaml  wait-for-udm-rest-api.py
docker/development-extension/: README.md
docker/joinscript-tools/: Dockerfile  README.md  dev-fixup-path.sh
docker/opendesk-extension/: Dockerfile  README.md
docs/: conf.py  index.rst  spelling_wordlist
docs/decisions/: 0001-use-architectural-decision-records-adrs.md  0002-use-custom-wait-script-for-udm-api-readiness.md
examples/: example-context.yaml  example-data-docker.yaml  example-data.yaml
helm/stack-data-swp/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/stack-data-ums/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
js-project/: package.json
js-project-npm/: package-lock.json  package.json
pipenv/: Pipfile
tests/: README.md  conftest.py  test_template_context.py  utils.py
tests/best_practices/: test_extensions.py  test_image_configuration.py  test_security_context.py
tests/chart/: conftest.py  test_administrator_password.py  test_readonly_user_password.py  test_svc_portal_server_password.py  test_template_context.py  test_udm.py  test_udm_authentication.py  test_udm_connection.py  utils.py
tests/helm_unit/: README.md  conftest.py  test_template_context.py  utils.py
util/: puma2yaml.py
(+138 files in other folders)
